--- a/src/components/carousel/style.scss
+++ b/src/components/carousel/style.scss
@@ -75,7 +75,7 @@ box-shadow: 10px 10px 35px -4px rgba(0,0,0,0.75);
       user-select: none;
       padding: 10px 12px;
       transform: skewY(-5deg) rotate(5deg);
-      background-color: gray;
+      background-color: $pink;
       font-family: inherit;
       font-size: inherit;
       border-radius: 5px;
