--- a/src/components/timeline/timeline.css
+++ b/src/components/timeline/timeline.css
@@ -94,7 +94,7 @@ h1 {
 .timeline ul li .time h4 {
   margin: 0;
   padding: 0;
-  font-size: 14px;
+  font-size: 18px;
 }
 .timeline ul li:nth-child(odd) .time {
   position: absolute;
@@ -103,8 +103,8 @@ h1 {
   margin: 0;
   padding: 8px 16px;
   background: #ff206e;
-  color: #fff;
-  border-radius: 18px;
+  color: white;
+  border-radius: 16px;
   box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.7);
 }
 .timeline ul li:nth-child(even) .time {
