--- a/src/components/carousel/style.scss
+++ b/src/components/carousel/style.scss
@@ -75,7 +75,7 @@ box-shadow: 10px 10px 35px -4px rgba(0,0,0,0.75);
       user-select: none;
       padding: 10px 12px;
       transform: skewY(-5deg) rotate(5deg);
-      background-color: $pink;
+      background-color: rgba(255, 255, 255, 0.783);
       font-family: inherit;
       font-size: inherit;
       border-radius: 5px;
@@ -91,6 +91,7 @@ box-shadow: 10px 10px 35px -4px rgba(0,0,0,0.75);
 
       &:hover {
         cursor: pointer;
+        background-color: #FF206E;
       }
 
       &:active {
